# Google-GenAI-Intensive-Course

./: README.md  pyproject.toml
codes/: selfAttention.ipynb
notebooks/: Day1_Prompting_Kaggle.md
whitepapers/: Multi_Headed_Attention.md  WHP_Foundational_LLMs.md
